--- a/analysis/analysis.qmd
+++ b/analysis/analysis.qmd
@@ -148,7 +148,7 @@ arousal_dist1
 #| fig-width: 12
 arousal_dist2 <- df2 |>
   ggplot(aes(x=Arousal, fill = Condition)) +
-  geom_bar(position = "identity", alpha = 0.5, line = "black") +
+  geom_bar(position = "identity", alpha = 0.5, colour = "black") +
   scale_y_sqrt(expand = c(0, 0)) +
   scale_x_continuous(breaks = c(0, 1)) +
   labs(title = "Arousal Study 2", ) +
@@ -160,39 +160,6 @@ arousal_dist2 <- df2 |>
 arousal_dist2
 ```
 
-### Arousal Distributions
-
-```{r Arousal1}
-#| fig-width: 12
-arousal_dist1 <- df1 |>
-  ggplot(aes(x=Arousal, fill = Condition)) +
-  geom_histogram(position = "identity", alpha = 0.5, colour = "black", bins = 30) +
-  scale_x_continuous(breaks = c(0, 1)) +
-  labs(title = "Arousal Study 1", ) +
-  facet_wrap(~Gender) +
-  scale_fill_manual(values=c("AI-Generated"="#2196F3", "Photograph"="#F44336")) +
-  theme_minimal() +
-  theme(plot.title = element_text(hjust = 0.5, face="bold"))
-
-
-arousal_dist1
-```
-
-```{r Arousal2}
-#| fig-width: 12
-arousal_dist2 <- df2 |>
-  ggplot(aes(x=Arousal, fill = Condition)) +
-  geom_bar(position = "identity", alpha = 0.5, line = "black") +
-  scale_y_sqrt(expand = c(0, 0)) +
-  scale_x_continuous(breaks = c(0, 1)) +
-  labs(title = "Arousal Study 2", ) +
-  facet_wrap(~Gender) +
-  scale_fill_manual(values=c("Photograph"="#F44336", "AI-Generated"="#2196F3")) +
-  theme_minimal() +
-  theme(plot.title = element_text(hjust = 0.5, face="bold"))
-
-arousal_dist2
-```
 
 ### Enticment Distributions
 
@@ -216,7 +183,7 @@ enticement_dist1
 #| fig-width: 12
 enticement_dist2 <- df2 |>
   ggplot(aes(x=Enticing, fill = Condition)) +
-  geom_bar(position = "identity", alpha = 0.5, line = "black") +
+  geom_bar(position = "identity", alpha = 0.5, colour = "black") +
   scale_y_sqrt(expand = c(0, 0)) +
   scale_x_continuous(breaks = c(0, 1)) +
   labs(title = "Enticment Study 2", ) +
@@ -250,7 +217,7 @@ valence_dist1
 #| fig-width: 12
 valence_dist2 <- df2 |>
   ggplot(aes(x=Valence, fill = Condition)) +
-  geom_bar(position = "identity", alpha = 0.5, line = "black") +
+  geom_bar(position = "identity", alpha = 0.5, colour = "black") +
   scale_y_sqrt(expand = c(0, 0)) +
   scale_x_continuous(breaks = c(0, 1)) +
   labs(title = "Valence Study 2", ) +
@@ -261,8 +228,14 @@ valence_dist2 <- df2 |>
 
 valence_dist2
 ```
+:::
 
-### Average Arousal 
+
+## Average Arousal
+
+::: {.panel-tabset}
+
+### Study 1
 
 ```{r meanarousal 1}
 #| message: false
@@ -303,6 +276,8 @@ diff_plot1 <- dfsub1 |>
 
 diff_plot1
 ```
+
+### Study 2
 
 ```{r meanarousal 2}
 #| message: false
@@ -372,11 +347,21 @@ params_table <- function(m) {
  }
 ```
 
+<!-- Study 2 Arousal:  Draws: 96 chains, each with iter = 2000; warmup = 1000; thin = 1; total post-warmup draws = 96000 -->
 
+<!-- Study 2 Arousal: Draws: 80 chains, each with iter=2000; warmup=1000; thin=1; post-warmup draws per chain=1000, total post-warmup draws=80000. -->
 ```{r}
 arousal1 <- readRDS("models/ModelArousal_1.rds")
 arousal2 <- readRDS("models/ModelArousal_2.rds")
 ```
+
+#### Posterior Description
+
+<!-- Sampling Diagnostics -->
+
+<!-- - ESS should be at least 1000 (the effective sample size - ESS - is an estimation of the number of independent samples) -->
+
+<!-- - R^(“R-hat”) Should be lower than 1.01 (R-hat is a measure of convergence) -->
 
 ```{r}
 params_table(arousal1)
@@ -384,120 +369,19 @@ summary(arousal1, robust = TRUE)
 ```
 
 ```{r}
-params_table(arousal2)
+params_table(arousal2) 
 summary(arousal2, robust = TRUE)
-
-``` 
-
-```{r}
-#| fig-height: 8
-#| fig-width: 8
-
-
-make_combined_plot <- function(model1, model2 = NULL, 
-                               title = "Estimated Marginal Means") {
-  
-  df1 <- modelbased::estimate_means(
-    model1, by = c("Gender", "Relevance", "Condition", "ConditionBelief"),backend = "emmeans") |>
-    dplyr::mutate(Sample = "Study 1") |>
-    as.data.frame()
-  
-  # Study 2: only Relevant
-  if (!is.null(model2)) {
-    df2 <- modelbased::estimate_means(
-      model2, by = c("Gender", "Condition", "ConditionBelief"), backend = "emmeans") |>
-      dplyr::mutate(Relevance = "Relevant", Sample = "Study 2") |>
-      as.data.frame()
-    pred_df <- rbind(df1, df2)
-  } else {
-    pred_df <- df1
-  }
-  
-  
-  plt <- pred_df |>
-    ggplot(aes(x = ConditionBelief, y = Estimate,color = Condition, linetype = Sample, group = interaction(Sample, Condition)
-    )) +
-    geom_hline(yintercept = 0, color = "darkgrey") +
-    geom_line(linewidth = 1) +
-    geom_point(size = 2) +
-    geom_errorbar(aes(ymin = CI_low, ymax = CI_high), width = 0.1) +
-    facet_grid(Relevance ~ Gender, switch = "y") +
-    scale_color_manual(values = c("AI-Generated" = "#2196F3","Photograph" = "#F44336")) +
-    theme_minimal(base_size = 14) +
-    labs(title = title, x= "Whether the original labels were believed to be true",color = "Images presented as:", linetype = "Sample"
-    ) +
-    theme(
-      axis.title.y = element_blank(),
-      axis.text.y = element_text(size = 8),
-      strip.placement = "outside",
-      strip.background.x = element_rect(fill = "lightgrey", color = NA),
-      strip.text.x = element_text(size = 10),
-      strip.text.y = element_text(size = 10),
-      axis.text.x = element_text(face = "bold", size = 9, color = "black"),
-      legend.text = element_text(size = 10),
-      legend.position = "bottom")
-  
-  plt
-}
-
-plta <- make_combined_plot(arousal1, arousal2, title = "Arousal Estimates for All Stimuli")
-
-plta
-```
-
-### Enticement
-
-```{r}
-enticement1 <- readRDS("models/ModelEnticement_1.rds")
-enticement2 <- readRDS("models/ModelEnticement_2.rds")
 ```
 
 
+#### Model Performance
+
 ```{r}
-params_table(enticement1)
-summary(enticement1, robust = TRUE)
+performance::performance(arousal1)
 ```
 
 ```{r}
-params_table(enticement2)
-summary(enticement2, robust = TRUE)
-
-``` 
-
-
-```{r}
-#| fig-height: 8
-#| fig-width: 8
-
-plt_e <- make_combined_plot(enticement1, enticement2, title = "Enticement Estimates for All Stimuli")
-plt_e
-```
-
-### Valence
-
-```{r}
-valence1 <- readRDS("models/ModelValence_1.rds")
-valence2 <- readRDS("models/ModelValence_2.rds")
-```
-
-
-```{r}
-params_table(valence1)
-summary(valence1, robust = TRUE)
-```
-
-```{r}
-params_table(valence2)
-summary(valence2, robust = TRUE)
-
-``` 
-
-```{r}
-#| fig-height: 8
-#| fig-width: 8
-
-plt_v <- make_combined_plot(valence1, valence2, title = "Valence Estimates for All Stimuli")
-plt_v
+performance::performance(arousal2)
 ```
 
 :::
