--- a/analysis/analysis.qmd
+++ b/analysis/analysis.qmd
@@ -399,6 +399,26 @@ df2 |>
 arousal1 <- readRDS("models/ModelArousal_1.rds")
 arousal2 <- readRDS("models/ModelArousal_2.rds")
 
+
+#Individual models
+
+m <- readRDS("models/individual_models/ModelArousal_1_task_1.rds")
+m <- readRDS("models/individual_models/ModelArousal_1_task_2.rds")
+m <- readRDS("models/individual_models/ModelArousal_1_task_3.rds")
+m <- readRDS("models/individual_models/ModelArousal_1_task_4.rds")
+m <- readRDS("models/individual_models/ModelArousal_1_task_5.rds")
+m <- readRDS("models/individual_models/ModelArousal_1_task_6.rds")
+
+
+m <- readRDS("models/individual_models/ModelArousal_2_task_1.rds")
+m <- readRDS("models/individual_models/ModelArousal_2_task_2.rds")
+m <- readRDS("models/individual_models/ModelArousal_2_task_3.rds")
+m <- readRDS("models/individual_models/ModelArousal_2_task_4.rds")
+m <- readRDS("models/individual_models/ModelArousal_2_task_5.rds")
+m <- readRDS("models/individual_models/ModelArousal_2_task_6.rds")
+
+
+
 ```
 
 #### Posterior Description
