--- a/analysis/analysis.qmd
+++ b/analysis/analysis.qmd
@@ -409,13 +409,13 @@ m <- readRDS("models/individual_models/ModelArousal_1_task_4.rds")
 m <- readRDS("models/individual_models/ModelArousal_1_task_5.rds")
 m <- readRDS("models/individual_models/ModelArousal_1_task_6.rds")
 
-
-m <- readRDS("models/individual_models/ModelArousal_2_task_1.rds")
-m <- readRDS("models/individual_models/ModelArousal_2_task_2.rds")
-m <- readRDS("models/individual_models/ModelArousal_2_task_3.rds")
-m <- readRDS("models/individual_models/ModelArousal_2_task_4.rds")
-m <- readRDS("models/individual_models/ModelArousal_2_task_5.rds")
-m <- readRDS("models/individual_models/ModelArousal_2_task_6.rds")
+# 
+# m <- readRDS("models/individual_models/ModelArousal_2_task_1.rds")
+# m <- readRDS("models/individual_models/ModelArousal_2_task_2.rds")
+# m <- readRDS("models/individual_models/ModelArousal_2_task_3.rds")
+# m <- readRDS("models/individual_models/ModelArousal_2_task_4.rds")
+# m <- readRDS("models/individual_models/ModelArousal_2_task_5.rds")
+# m <- readRDS("models/individual_models/ModelArousal_2_task_6.rds")
 
 
 
