--- a/analysis/analysis.qmd
+++ b/analysis/analysis.qmd
@@ -75,17 +75,20 @@ df1 <- read.csv("https://raw.githubusercontent.com/RealityBending/FictionEro/ref
     by = "Participant") |> 
   rename(Gender = Sex) |>
   datawizard::rescale(select=c("Valence"), range=c(-1, 1), to=c(0, 1)) |> 
-  mutate(Condition = fct_relevel(Condition, "Photograph", "AI-Generated"),
-         Relevance =  fct_relevel(Relevance, "Relevant", "Irrelevant", "Non-erotic"),
+  mutate(Condition = fct_recode(Condition, "Photograph" = "Photograph", "AIGenerated" = "AI-Generated"),
+         Condition = fct_relevel(Condition, "Photograph", "AIGenerated"),
+         Relevance = fct_recode(Relevance,  "Relevant" = "Relevant",  "Irrelevant"= "Irrelevant", "NonErotic" = "Non-erotic"),
+         Relevance =  fct_relevel(Relevance, "Relevant", "Irrelevant", "NonErotic"),
          Gender =  fct_relevel(Gender, "Male", "Female"),
-         PornFrequency = as.numeric(as.factor(COPS_Frequency_2)),
-         SexualActivity_num = as.numeric(as.factor(SexualActivity)),
          ConditionBelief = case_when(
            Condition == "Photograph" & Realness > 0.5 ~ "True",
-           Condition == "AI-Generated" & Realness < 0.5 ~ "True",
-           .default = "False"
-         )) |> 
-  mutate(across(starts_with("Feedback_"), function(x) {fct_relevel(x, "False", "True")}))
+           Condition == "AIGenerated" & Realness < 0.5 ~ "True",
+           .default = "False"),
+         ConditionBelief = as.factor(ConditionBelief),
+         ConditionBelief = fct_relevel(ConditionBelief, "True", "False"),
+         PornFrequency = as.numeric(as.factor(COPS_Frequency_2)),
+         SexualActivity_num = as.numeric(as.factor(SexualActivity)),
+         across(starts_with("Feedback_"), function(x) {fct_relevel(x, "False", "True")}))
 ```
 
 ```{r data study2}
@@ -97,33 +100,29 @@ df2 <- read.csv("https://raw.githubusercontent.com/RealityBending/FictionEro/ref
     select(dfsub2, Participant, Mobile, starts_with(c("Feedback_","BAIT")), COPS_Frequency, SexualActivity,- Feedback_Text),
     by = "Participant"
   ) |> 
-  datawizard::rescale(select= c("Arousal", "Enticing", "Valence"), range=c(0, 6), to=c(0,1)) |> 
+  datawizard::rescale(select= c("Arousal", "Enticing", "Valence"), range=c(0, 6), to=c(0,1)) |>
   datawizard::rescale(select= c("Realness"), range=c(-3,3), to=c(0,1)) |>
-  mutate(Condition = case_when(
-    Condition == "Fiction" ~ "AI-Generated",
-    Condition == "Reality" ~ "Photograph"
-  )) |>
-  mutate(Condition = fct_relevel(Condition, "Photograph", "AI-Generated"),
-         Gender =  fct_relevel(Gender, "Male", "Female"),
-         SexualOrientation = fct_relevel(SexualOrientation, "Heterosexual", "Homosexual", "Bisexual"),
-         PornFrequency = as.numeric(as.factor(COPS_Frequency)),
-         SexualActivity_num = as.numeric(as.factor(SexualActivity)),
+  filter(SexualOrientation == "Heterosexual") |> # Keep only heterosexuals
+  mutate(Gender =  fct_relevel(Gender, "Male", "Female"),
+         Condition = case_when(
+           Condition == "Fiction" ~ "AIGenerated",
+           Condition == "Reality" ~ "Photograph"), 
+         Condition = fct_relevel(Condition, "Photograph", "AIGenerated"),
          ConditionBelief = case_when(
            Condition == "Photograph" & Realness > 0.5 ~ "True",
-           Condition == "AI-Generated" & Realness < 0.5 ~ "True",
-           .default = "False",
-         )) |>
-  rename(AllRealConfidence = "Feedback_AllRealConfidence",
-         AllFakeConfidence = "Feedback_AllFakeConfidence",
-         Enjoyment = "Feedback_Enjoyment",
-         Item = Stimulus
-  )|>
-  mutate(across(starts_with("Feedback_"), as.factor)) |>
-  mutate(ConditionBelief = as.factor(ConditionBelief)) |>
-  mutate(StimuliType = case_when(
-    grepl("couple", Item, ignore.case = TRUE) ~ "Couple",
-    TRUE ~ "Individual")) |>
-  mutate(StimuliType = fct_relevel(StimuliType, "Individual", "Couple"))
+           Condition == "AIGenerated" & Realness < 0.5 ~ "True",
+           .default = "False"),
+         ConditionBelief = as.factor(ConditionBelief),
+         ConditionBelief = fct_relevel(ConditionBelief, "True", "False"),
+         PornFrequency = as.numeric(as.factor(COPS_Frequency)),
+         SexualActivity_num = as.numeric(as.factor(SexualActivity)),
+         across(starts_with("Feedback_"), as.factor), 
+         across(starts_with("Feedback_"), function(x) {fct_relevel(x, "False", "True")})) |>
+    rename(Item = Stimulus,
+           Enticement = Enticing,
+           AllRealConfidence = "Feedback_AllRealConfidence",
+           AllFakeConfidence = "Feedback_AllFakeConfidence",
+           Enjoyment = "Feedback_Enjoyment") 
 ```
 
 
@@ -152,7 +151,7 @@ arousal_dist1 <- df1 |>
   scale_x_continuous(breaks = c(0, 1)) +
   labs(title = "Arousal Study 1", ) +
   facet_wrap(~Gender) +
-  scale_fill_manual(values=c("AI-Generated"="#2196F3", "Photograph"="#F44336")) +
+  scale_fill_manual(values=c("AIGenerated"="#2196F3", "Photograph"="#F44336")) +
   theme_minimal() +
   theme(plot.title = element_text(hjust = 0.5, face="bold"))
 
@@ -169,7 +168,7 @@ arousal_dist2 <- df2 |>
   scale_x_continuous(breaks = c(0, 1)) +
   labs(title = "Arousal Study 2", ) +
   facet_wrap(~Gender) +
-  scale_fill_manual(values=c("Photograph"="#F44336", "AI-Generated"="#2196F3")) +
+  scale_fill_manual(values=c("AIGenerated"="#2196F3", "Photograph"="#F44336")) +
   theme_minimal() +
   theme(plot.title = element_text(hjust = 0.5, face="bold"))
 
@@ -187,7 +186,7 @@ enticement_dist1 <- df1 |>
   scale_x_continuous(breaks = c(0, 1)) +
   labs(title = "Enticement Study 1", ) +
   facet_wrap(~Gender) +
-  scale_fill_manual(values=c("AI-Generated"="#2196F3", "Photograph"="#F44336")) +
+  scale_fill_manual(values=c("AIGenerated"="#2196F3", "Photograph"="#F44336")) +
   theme_minimal() +
   theme(plot.title = element_text(hjust = 0.5, face="bold"))
 
@@ -198,13 +197,13 @@ enticement_dist1
 ```{r Arousal2}
 #| fig-width: 12
 enticement_dist2 <- df2 |>
-  ggplot(aes(x=Enticing, fill = Condition)) +
+  ggplot(aes(x=Enticement, fill = Condition)) +
   geom_bar(position = "identity", alpha = 0.5, colour = "black") +
   scale_y_sqrt(expand = c(0, 0)) +
   scale_x_continuous(breaks = c(0, 1)) +
   labs(title = "Enticment Study 2", ) +
   facet_wrap(~Gender) +
-  scale_fill_manual(values=c("Photograph"="#F44336", "AI-Generated"="#2196F3")) +
+  scale_fill_manual(values=c("Photograph"="#F44336", "AIGenerated"="#2196F3")) +
   theme_minimal() +
   theme(plot.title = element_text(hjust = 0.5, face="bold"))
 
@@ -221,7 +220,7 @@ valence_dist1 <- df1 |>
   scale_x_continuous(breaks = c(0, 1)) +
   labs(title = "Valence Study 1", ) +
   facet_wrap(~Gender) +
-  scale_fill_manual(values=c("AI-Generated"="#2196F3", "Photograph"="#F44336")) +
+  scale_fill_manual(values=c("AIGenerated"="#2196F3", "Photograph"="#F44336")) +
   theme_minimal() +
   theme(plot.title = element_text(hjust = 0.5, face="bold"))
 
@@ -238,7 +237,7 @@ valence_dist2 <- df2 |>
   scale_x_continuous(breaks = c(0, 1)) +
   labs(title = "Valence Study 2", ) +
   facet_wrap(~Gender) +
-  scale_fill_manual(values=c("Photograph"="#F44336", "AI-Generated"="#2196F3")) +
+  scale_fill_manual(values=c("Photograph"="#F44336", "AIGenerated"="#2196F3")) +
   theme_minimal() +
   theme(plot.title = element_text(hjust = 0.5, face="bold"))
 
@@ -266,7 +265,7 @@ dfsub1 <- dfsub1 |>
         names_prefix = "mean_Arousal_",
         values_from = mean_arousal
       ) |>
-      mutate(diff_arousal = `mean_Arousal_AI-Generated` - mean_Arousal_Photograph)
+      mutate(diff_arousal = `mean_Arousal_AIGenerated` - mean_Arousal_Photograph)
   )
 
 ttest1 <- stats::t.test(diff_arousal ~ Feedback_AILessArousing, data = dfsub1)
@@ -275,7 +274,7 @@ ttest1 <- stats::t.test(diff_arousal ~ Feedback_AILessArousing, data = dfsub1)
 ```{r}
 diff_plot1 <- dfsub1 |> 
   ggplot(aes(x = Feedback_AILessArousing, y = diff_arousal, fill = Feedback_AILessArousing)) +
-  geom_boxplot(width = 0.4,alpha = 0.6) +
+  geom_boxplot(width = 0.4,alpha = 0.7) +
   geom_jitter(width = 0.2, alpha = 0.1, size = 1) +
   stat_summary(fun = mean, geom = "point", shape = 23, size = 2, fill = "black") +
   labs(
@@ -283,7 +282,7 @@ diff_plot1 <- dfsub1 |>
     x = "Participant said AI is less arousing",
     y = "Arousal Difference (AI - Photo)"
   ) +
-  scale_fill_manual(values = c("True" = "#FF9800", "False" = "#E91E63")) +
+  scale_fill_manual(values = c("True" = "#E66100", "False" = "#5D3A9B")) +
   theme_minimal() +
   theme(
     plot.title = element_text(hjust = 0.5, face = "bold"),
@@ -306,7 +305,7 @@ dfsub2 <- dfsub2 |>
       pivot_wider(names_from = Condition, 
                   names_prefix = "mean_Arousal_", 
                   values_from = mean_arousal) |>
-      mutate(diff_arousal = `mean_Arousal_AI-Generated` - mean_Arousal_Photograph)
+      mutate(diff_arousal = `mean_Arousal_AIGenerated` - mean_Arousal_Photograph)
   )
 
 ttest2 <- stats::t.test(diff_arousal ~ Feedback_AILessArousing, data = dfsub2)
@@ -315,7 +314,7 @@ ttest2 <- stats::t.test(diff_arousal ~ Feedback_AILessArousing, data = dfsub2)
 ```{r}
 diff_plot2 <- dfsub2 |> 
   ggplot(aes(x = Feedback_AILessArousing, y = diff_arousal, fill = Feedback_AILessArousing)) +
-  geom_boxplot(width = 0.4, alpha = 0.6) +
+  geom_boxplot(width = 0.4, alpha = 0.7) +
   geom_jitter(width = 0.2, alpha = 0.1, size = 1) +
   stat_summary(fun = mean, geom = "point", shape = 23, size = 2, fill = "black") +
   labs(
@@ -323,7 +322,7 @@ diff_plot2 <- dfsub2 |>
     x = "Participant said AI is less arousing",
     y = "Arousal Difference (AI - Photo)"
   ) +
-  scale_fill_manual(values = c("True" = "#FF9800", "False" = "#E91E63")) +
+  scale_fill_manual(values = c("True" = "#E66100", "False" = "#5D3A9B")) +
   theme_minimal() +
   theme(
     plot.title = element_text(hjust = 0.5, face = "bold"),
@@ -348,49 +347,25 @@ diff_plot2
 
 #### Distributions
 
-<!-- - condition as random intercept for participant converged but not sure whether we should keep intercepts different or the same for the models? -->
-
-<!-- ```{r} -->
-
-<!-- m_arousal1 <- glmmTMB::glmmTMB(Arousal ~ Gender / Relevance / Condition + (Relevance | Participant) + (Relevance|Item), data=df1, family=glmmTMB::ordbeta(), control = glmmTMB::glmmTMBControl(parallel = 8)) -->
-
-
-<!-- m_arousal2 <- glmmTMB::glmmTMB(Arousal ~ Gender/ Condition + (1| Participant) + (1|Item), family=glmmTMB::ordbeta(), data=df2, control = glmmTMB::glmmTMBControl(parallel = 8)) -->
-<!-- ``` -->
-
 ```{r}
 df1 |> 
   ggplot(aes(x = Gender, y = Arousal, fill = ConditionBelief)) +
-  geom_violin(position = position_dodge(width = 1), alpha = 0.6, trim = FALSE) +
-  stat_pointinterval(
-    position = position_dodge(width = 1),
-    .width = c(.66, .95),
-    point_size = 1.5) +
+  geom_violin(position = position_dodge(width = 1), alpha = 0.7, trim = FALSE) +
+  stat_pointinterval(position = position_dodge(width = 1),point_size = 1.5) +
   facet_grid(Relevance ~ Condition) +
+  scale_fill_manual(values = c("True" = "#E66100", "False" = "#5D3A9B")) +
   theme_minimal(base_size = 14) +
-  labs(
-    title = "Arousal by Gender × Belief × Relevance × Condition",
-    x = "Gender",
-    y = "Arousal",
-    fill = " Condition Belief"
-  )
+  labs(title = "Arousal by Gender × Belief × Relevance × Condition", subtitle ="Study 1", x = "Gender",y = "Arousal",fill = " Condition Belief")
 
 
 df2 |> 
   ggplot(aes(x = Gender, y = Arousal, fill = ConditionBelief)) +
-  geom_violin(position = position_dodge(width = 1), alpha = 0.6, trim = FALSE) +
-  stat_pointinterval(
-    position = position_dodge(width = 1),
-    .width = c(.66, .95),
-    point_size = 1.5) +
+  geom_violin(position = position_dodge(width = 1), alpha = 0.7, trim = FALSE) +
+  stat_pointinterval(position = position_dodge(width = 1),point_size = 1.5) +
   facet_grid( ~ Condition) +
+  scale_fill_manual(values = c("True" = "#E66100", "False" = "#5D3A9B")) +
   theme_minimal(base_size = 14) +
-  labs(
-    title = "Arousal by Gender × Belief × Relevance × Condition",
-    x = "Gender",
-    y = "Arousal",
-    fill = " Condition Belief"
-  )
+  labs(title = "Arousal by Gender × Belief × Relevance × Condition", subtitle ="Study 2", x = "Gender", y = "Arousal",fill = " Condition Belief")
 
 ```
 
@@ -398,29 +373,6 @@ df2 |>
 ```{r}
 arousal1 <- readRDS("models/ModelArousal_1.rds")
 arousal2 <- readRDS("models/ModelArousal_2.rds")
-
-arousal1_cr <- readRDS("models/ModelArousal_1_CR.rds")
-
-
-#Individual models
-
-m <- readRDS("models/individual_models/ModelArousal_1_task_1.rds")
-m <- readRDS("models/individual_models/ModelArousal_1_task_2.rds")
-m <- readRDS("models/individual_models/ModelArousal_1_task_3.rds")
-m <- readRDS("models/individual_models/ModelArousal_1_task_4.rds")
-m <- readRDS("models/individual_models/ModelArousal_1_task_5.rds")
-m <- readRDS("models/individual_models/ModelArousal_1_task_6.rds")
-
-# 
-# m <- readRDS("models/individual_models/ModelArousal_2_task_1.rds")
-# m <- readRDS("models/individual_models/ModelArousal_2_task_2.rds")
-# m <- readRDS("models/individual_models/ModelArousal_2_task_3.rds")
-# m <- readRDS("models/individual_models/ModelArousal_2_task_4.rds")
-# m <- readRDS("models/individual_models/ModelArousal_2_task_5.rds")
-# m <- readRDS("models/individual_models/ModelArousal_2_task_6.rds")
-
-
-
 ```
 
 #### Posterior Description
@@ -437,7 +389,7 @@ m <- readRDS("models/individual_models/ModelArousal_1_task_6.rds")
 <!-- ``` -->
 
 ```{r}
-params_table(m_arousal1)
+params_table(arousal1)
 summary(arousal1, robust = TRUE)
 ```
 
