--- a/analysis/analysis.qmd
+++ b/analysis/analysis.qmd
@@ -432,7 +432,7 @@ table_dvour <- function(g) {
 #### Arousal Study 1 
 
 ```{r}
-a1 <- modelbased::estimate_grouplevel(arousal1_GAU)
+a1 <- modelbased::estimate_grouplevel(arousal1_ZOIB)
 ```
 
 ```{r}
@@ -442,7 +442,7 @@ table_dvour(a1)
 #### Arousal Study 2
 
 ```{r}
-a2 <- modelbased::estimate_grouplevel(arousal2_GAU)
+a2 <- modelbased::estimate_grouplevel(arousal2_ZOIB)
 ```
 
 ```{r}
@@ -461,7 +461,7 @@ table_dvour(a2)
 ```{r}
 colors <- c("Intercept" = "#9C27B0", "ConditionAIMGenerated" = "#FF9800")
 
-p2_dvour <- g1 |> 
+p2_dvour <- a1 |> 
    mutate(Group = fct_relevel(Group, "Participant", "Item"),
           Parameter = fct_relevel(Parameter, "Intercept", "ConditionAIMGenerated")) |>
   ggplot(aes(x = Median , y = Level)) +
@@ -488,11 +488,11 @@ p2_dvour
 ##### Study 2
 
 ```{r}
-colors <- c("Intercept" = "#9C27B0", "ConditionAIMGenerated" = "#FF9800")
+colors <- c("Intercept" = "#9C27B0", "ConditionAIGenerated" = "#FF9800")
 
-p2_dvour <- g1 |> 
+p2_dvour <- a2 |> 
    mutate(Group = fct_relevel(Group, "Participant", "Item"),
-          Parameter = fct_relevel(Parameter, "Intercept", "ConditionAIMGenerated")) |>
+          Parameter = fct_relevel(Parameter, "Intercept", "ConditionAIGenerated")) |>
   ggplot(aes(x = Median , y = Level)) +
   geom_pointrange(aes(xmin = CI_low, xmax = CI_high, color = Parameter), linewidth = 0.3, size = 0.05) +
   facet_grid(Group~Parameter, scales = "free", switch="both") +
@@ -520,130 +520,5 @@ p2_dvour
 <!-- - look at mint and fiction choco analysis for correlation matrix -->
 
 #### Study 1 
-
-```{r}
-
-df_phase <- as.data.frame(g1) |>
-  filter(Group == "Participant") |>
-  mutate(Parameter = as.factor(Parameter)) |>
-   pivot_wider(id_cols = Level, names_from = Parameter, values_from = c(Median, MAD, CI_low, CI_high),names_glue = "{Parameter}_{.value}"
-  ) |>
-  rename(Participant= Level)
-
-head(g2_phase)
-
-df_dispositional <- dfsub1 |>
-  select(Participant, 
-           BAIT_Videos, BAIT_Visual, BAIT_Text, AI_Knowledge, SexualActivity, 
-           GAAIS_Negative, GAAIS_Positive, Porn) |>
-  rename(Porn_factor = Porn)
-
-head(g3_dispositional)
-
-```
-
-```{r}
-make_cor <- function(df_phase, df_dispositional = NULL, 
-                     qname_x = TRUE, qname_y = TRUE, 
-                     textsize = 3, xcol = "#424242", ycol = "#424242") {
-
-  # Identify common participants (if df_dispositional provided)
-  if (!is.null(df_dispositional)) {
-    common_ids <- intersect(df_phase$Participant, df_dispositional$Participant)
-    df_phase <- df_phase |> filter(Participant %in% common_ids) |> arrange(Participant)
-    df_dispositional <- df_dispositional |> filter(Participant %in% common_ids) |> arrange(Participant)
-  }
-
-  # Compute correlations
-  # r <- df_phase |>
-  #   select(ConditionAIMGenerated_Median, Intercept_Median) |>
-  #   correlation::correlation(
-  #     data2 = if (!is.null(df_dispositional)) df_dispositional |> select(-Participant) else NULL,
-  #     p_adjust = "none",
-  #     redundant = ifelse(is.null(df_dispositional), TRUE, FALSE)
-  #   ) |>
-  #   correlation::cor_sort() |>
-  #   mutate(
-  #     label = ifelse(p < .05, paste0(insight::format_value(r, lead_zero = FALSE, zap_small = TRUE)), ""),
-  #     Parameter1 = as.factor(Parameter1),
-  #     Parameter2 = as.factor(Parameter2)
-  #   )
-  
-  r <- df_phase |>
-  select(ConditionAIMGenerated_Median, Intercept_Median) |>
-  correlation::correlation(
-    data2 = if (!is.null(df_dispositional)) df_dispositional |> select(-Participant) else NULL,
-    p_adjust = "none",
-    redundant = ifelse(is.null(df_dispositional), TRUE, FALSE)
-  ) |>
-  correlation::cor_sort() |>
-  mutate(
-    # always show r, add '*' if p < .05
-    label = paste0(
-      insight::format_value(r, lead_zero = FALSE, zap_small = TRUE),
-      ifelse(p < .05, "*", "")
-    ),
-    Parameter1 = as.factor(Parameter1),
-    Parameter2 = as.factor(Parameter2)
-  )
-    
-
-
-  # Clear diagonal labels
-  r[as.character(r$Parameter1) == as.character(r$Parameter2), "label"] <- ""
-
-  # Axis names
-  xnames <- levels(r$Parameter1)
-  ynames <- levels(r$Parameter2)
-
-  # xcol <- case_when(
-  #   str_detect(xnames, "Condition") ~ "#1565C0",
-  #   str_detect(xnames, "Intercept") ~ "#6A1B9A",
-  #   .default = xcol
-  # )
-  # ycol <- case_when(
-  #   str_detect(ynames, "BAIT") ~ "#00838F",
-  #   str_detect(ynames, "GAAIS") ~ "#C62828",
-  #   str_detect(ynames, "AI_Knowledge") ~ "#EF6C00",
-  #   .default = ycol
-  # )
-
-  # Bold emphasis (optional, minimal)
-  xbold <- case_when(
-    str_detect(xnames, "Condition") ~ "bold",
-    str_detect(xnames, "Intercept") ~ "bold",
-    .default = "plain"
-  )
-  ybold <- case_when(
-    str_detect(ynames, "BAIT") ~ "bold",
-    str_detect(ynames, "GAAIS") ~ "bold",
-    str_detect(ynames, "Porn") ~ "bold",
-    str_detect(ynames, "AI") ~ "bold",
-    .default = "plain"
-  )
-
-  # Plot
-  r |>
-    ggplot(aes(x = Parameter1, y = Parameter2, fill = r)) +
-    geom_tile() +
-    geom_text(aes(label = label), size = textsize, lineheight = 0.9) +
-    scale_fill_gradient2(low = "blue", high = "red", mid = "white", midpoint = 0) +
-    theme_minimal() +
-    theme(
-      axis.text.x = element_text(color = xcol, face = xbold),
-      axis.text.y = element_text(color = ycol, face = ybold),
-      legend.position = "none",
-      axis.title = element_blank()
-    )
-}
-
-
-p_corAI <- make_cor(df_phase, df_dispositional, qname_x = FALSE, qname_y = FALSE, textsize = 3)  +
-  labs(title="Correlations between the effect of condition and dispositional traits") +
-  theme(axis.title = element_blank())
-
-p_corAI 
-```
-
 
 #### Study 2 
